--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Rukun Chat{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/images/logo.jpg">
     <!-- Add Bootstrap CSS link or other stylesheets for styling -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
